--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
                 <p class="text-large"> <b>Кондиционер:</b> отсутствует</p>
                 <p class="text-large"> <b>Печка:</b> адское горнило</p>
                 <p class="text-large"> <b>Внутренняя отделка:</b> линолеум</p>
-                <p class="text-large"> <b>Внутренняя отделка:</b> линолеум</p>
-                <p class="text-large"> <b>Водительское кресло:</b> с массажем</p>
+                <p class="text-large"> <b>Водительское кресло:</b> с "массажем"</p>
                 <p class="text-large"> <b>Сигнализация:</b> есть</p>
                 <p class="text-large"> <b>Потолок:</b> серый</p>
                 <p class="text-large"> <b>Диски:</b> плохие</p>
