add responsive css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="column-33">
                 <h2 class="subtitle-main text-center">Самурай, преданный до последнего вздоха!</h2>
             </div>
-            <div class="text-center">
-                <a href="#buy" class="button button-red">Купить</a>
-            </div>
+        </div>
+        <div class="container text-center">
+            <a href="#buy" class="button button-red">Купить</a>
         </div>
     </div>
 
@@ -39,7 +39,7 @@
                 <img src="img/car.jpg" alt="[Car photo]" class="сar-image">
             </div>
             <div class="text-box">
-                <h2 class="block-title text-center">Тех. характеристики</h2>
+                <h2 class="block-title text-center">Характеристики</h2>
                 <p class="text-large"> <b>Модель:</b> ВАЗ 2107</p>
                 <p class="text-large"> <b>Год выпуска:</b> 1996</p>
                 <p class="text-large"> <b>Состояние:</b> на ходу</p>
