footer at the bottom of the page or content (if there is more content)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-<div class="main" id="top">
+<div class="wrapper" id="top">
+    
     <div class="header" data-parallax="scroll" data-image-src="img/header_bg.jpg">
         <div class="container">
             <h1 class="title-main">ПРОДАМ CЕМЁРКУ</h1>
@@ -31,150 +32,149 @@
             <a href="#buy" class="button button-red">Купить</a>
         </div>
     </div>
-
-    <div class="container">
-        <div class="column-40">
-            <div class="text-box">
-                <h2 class="block-title text-center">Моя прелесть</h2>
-                <img src="img/car.jpg" alt="[Car photo]" class="сar-image">
+    
+    <div class="content">
+        <div class="container">
+            <div class="column-40">
+                <div class="text-box">
+                    <h2 class="block-title text-center">Моя прелесть</h2>
+                    <img src="img/car.jpg" alt="[Car photo]" class="сar-image">
+                </div>
+                <div class="text-box">
+                    <h2 class="block-title text-center">Характеристики</h2>
+                    <p class="text-large"> <b>Модель:</b> ВАЗ 2107</p>
+                    <p class="text-large"> <b>Год выпуска:</b> 1996</p>
+                    <p class="text-large"> <b>Состояние:</b> на ходу</p>
+                    <p class="text-large"> <b>Пробег:</b> от 52000 до 252000 км</p>
+                    <p class="text-large"> <b>Макс. скорость:</b> 130 км/ч</p>
+                </div>
+                <div class="text-box">
+                    <h2 class="block-title text-center">Оснащение</h2>
+                    <p class="text-large"> <b>Кондиционер:</b> отсутствует</p>
+                    <p class="text-large"> <b>Печка:</b> адское горнило</p>
+                    <p class="text-large"> <b>Внутренняя отделка:</b> линолеум</p>
+                    <p class="text-large"> <b>Водительское кресло:</b> с "массажем"</p>
+                    <p class="text-large"> <b>Сигнализация:</b> есть</p>
+                    <p class="text-large"> <b>Потолок:</b> серый</p>
+                    <p class="text-large"> <b>Диски:</b> плохие</p>
+                </div>
+                <div class="text-box">
+                    <h2 class="block-title text-center">Состояние</h2>
+                    <ul class="list-main">
+                        <li class="text-large">Состояние спорное</li>
+                        <li class="text-large">В ДТП не участвовала</li>
+                        <li class="text-large">Оба передних крыла помяты</li>
+                        <li class="text-large">Некрашенный участок серого цвета у левого крыла</li>
+                        <li class="text-large">Кузов целиком менян в 2000 году</li>
+                        <li class="text-large">Пасажирская дверь заедает</li>
+                        <li class="text-large">Салон прокурен</li>
+                    </ul>
+                </div>
+                <div class="text-box">
+                    <h2 class="block-title text-center">Кому это нужно</h2>
+                    <ul class="list-main">
+                        <li class="text-large">Для начинающих водителей</li>
+                        <li class="text-large">Для грубой работы на износ</li>
+                        <li class="text-large">Дя энтузиастов</li>
+                        <li class="text-large">Для творческих натур</li>
+                    </ul>
+                </div>
+                <div class="text-box" id="buy">
+                    <h2 class="block-title text-center">Стоимость</h2>
+                    <p class="price">ВСЕГО</p>
+                    <p class="price">40&nbsp;000 рублей</p>
+                    <div class="text-center">
+                        <a href="#" class="button button-red">Купить</a>
+                    </div>
+                </div>
             </div>
-            <div class="text-box">
-                <h2 class="block-title text-center">Характеристики</h2>
-                <p class="text-large"> <b>Модель:</b> ВАЗ 2107</p>
-                <p class="text-large"> <b>Год выпуска:</b> 1996</p>
-                <p class="text-large"> <b>Состояние:</b> на ходу</p>
-                <p class="text-large"> <b>Пробег:</b> от 52000 до 252000 км</p>
-                <p class="text-large"> <b>Макс. скорость:</b> 130 км/ч</p>
-            </div>
-            <div class="text-box">
-                <h2 class="block-title text-center">Оснащение</h2>
-                <p class="text-large"> <b>Кондиционер:</b> отсутствует</p>
-                <p class="text-large"> <b>Печка:</b> адское горнило</p>
-                <p class="text-large"> <b>Внутренняя отделка:</b> линолеум</p>
-                <p class="text-large"> <b>Водительское кресло:</b> с "массажем"</p>
-                <p class="text-large"> <b>Сигнализация:</b> есть</p>
-                <p class="text-large"> <b>Потолок:</b> серый</p>
-                <p class="text-large"> <b>Диски:</b> плохие</p>
-            </div>
-            <div class="text-box">
-                <h2 class="block-title text-center">Состояние</h2>
-                <ul class="list-main">
-                    <li class="text-large">Состояние спорное</li>
-                    <li class="text-large">В ДТП не участвовала</li>
-                    <li class="text-large">Оба передних крыла помяты</li>
-                    <li class="text-large">Некрашенный участок серого цвета у левого крыла</li>
-                    <li class="text-large">Кузов целиком менян в 2000 году</li>
-                    <li class="text-large">Пасажирская дверь заедает</li>
-                    <li class="text-large">Салон прокурен</li>
-                </ul>
-            </div>
-            <div class="text-box">
-                <h2 class="block-title text-center">Кому это нужно</h2>
-                <ul class="list-main">
-                    <li class="text-large">Для начинающих водителей</li>
-                    <li class="text-large">Для грубой работы на износ</li>
-                    <li class="text-large">Дя энтузиастов</li>
-                    <li class="text-large">Для творческих натур</li>
-                </ul>
-            </div>
-            <div class="text-box" id="buy">
-                <h2 class="block-title text-center">Стоимость</h2>
-                <p class="price">ВСЕГО</p>
-                <p class="price">40&nbsp;000 рублей</p>
-                <div class="text-center">
-                    <a href="#" class="button button-red">Купить</a>
+            <div class="column-60">
+                <div class="text-box">
+                    <h2 class="block-title text-center">История тачки</h2>
+                    <p class="text-main">
+                        Продаю свою "семерку"! Покупка, прямо скажем, сомнительная, но зато и цена - чисто символическая.
+                        40 тысяч рублей и корвет ваш! Год выпуска 1996, состояние спорное.Пробег обозначен на табло как 52000,
+                        но под этим стоит понимать 152000. А если совсем честно, то 252000.
+                    </p>
+                    <p class="text-main">
+                        Самое главное, аппарат на ходу! По городу никаких проблем (кроме того, что без кондиционера летом в ней жарко как в аду).
+                        Рвёт со светофора многие иномарки (особенно те, которые не подозревают, что участвуют в состязании).
+                        По трассе тоже нормуль. Какую скорость вам удастся на ней развить, зависит только от вашего инстинкта самосохранения.
+                        Лично я в те редкие разы, когда разгонял ее до 130, ловил себя на том, что не моргаю, не шевелюсь и практически не дышу.
+                    </p>
+                    <p class="text-main">
+                        Машина в ДТП не участвововала. Но передние крылья немного помяты оба. Наверное били до меня. Хотя я тоже раз стукнул, если честно, но очень медленно.
+                        У левого крыла есть некрашеный участок серого цвета.
+                        Очень помогает обнаруживать автомобиль на больших парковках и придает зверюге неповторимую индивидуальность.
+                        По кузову - есть некоторые участки, которые можно считать нормальными. Кузов целиком менян в 2000 году, но по нему не скажешь.
+                    </p>
+                    <p class="text-main">
+                        Внутренняя отделка салона выполнена по чьей-то непостижимой прихоти с использованием линолеума. С этим придется жить.
+                        Глубоко в водительском кресле (у которого что-то лопнуло внутри, отчего оно стало ниже, чем должно быть)
+                        есть какая-то очень острая деталь, которая иногда больно впивается в поясницу. Я так и не разобрался, что это за деталь,
+                        почему она там и как такое вообще может быть.
+                    </p>
+                    <p class="text-main">
+                        Пассажирская дверь периодически заедает. Брелок сигнализации в ахтунге, давно выпала пластмасса над главной кнопкой,
+                        поэтому туда приходится тыкать ключом. Но это не сложно, потому что ключ всегда отдельно от брелка,
+                        потому что пластмассовое ушко тоже давно разломалось. В сервисе на вопрос о замене брелка неуважительно смеются.
+                    </p>
+                    <p class="text-main">
+                        В машине последние полтора года не курил. А до этого курил, очень много.
+                        Но не больше, чем предыдущий хозяин и его многочисленные друзья - одновременно, все вместе, зимой, с плотно закрытыми стеклами.
+                        Потолок нехарактерно серого цвета не позволит этого скрыть.
+                    </p>
+                    <p class="text-main">
+                        Диски плохие.
+                    </p>
+                    <p class="text-main">
+                        Печка - адское горнило - работает зимой так что мама не горюй.
+                        Но к сожалению, горячий воздух подтравливает снизу и летом, когда печка выключена, и если жать больше 110 по трассе в сандалях,
+                        то по-мелочи припекает пальцы на правой ноге.
+                    </p>
+                    <p class="text-main">
+                        Из монтажного блока имеются странные разводки, которые не с первого раза понимает даже мой электрик.
+                        Я не смогу объяснить зачем некоторые из них сделаны, но точно помню, что без них что-то не крутится.
+                        Сам монтажный блок, кстати, лучше поменять, некоторые контакты подоткнуты спичками и прутиками, это не совсем правильно и не очень безопасно.
+                    </p>
+                    <p class="text-main">
+                        Я рад бы сказать, что зато в эту машину вложена вся моя любовь и забота, но это не так.
+                        В нее вложены только ненависть и презрение. Не шаря в устройстве автомобиля, капот я открывал либо чтобы долить какую-нибудь жидкость,
+                        исчезнувшую накануне без следа и видимых причин, либо чтобы в недоумении смотреть на двигатель, когда машина вдруг встаёт.
+                    </p>
+                    <p class="text-main">
+                        Кому это нужно. Отличный тренажер для начинающих, после которого вождение любого автомобиля,
+                        чей год выпуска позже 1982 года, покажется благодатным облегчением. Для грубой работы на износ.
+                        Груженая под крышу стройматериалами и с потным мужиком-работягой за рулем эта машина будет выглядеть правильнее,
+                        чем с девочкой-студенткой, чей телефон стоит примерно столько же.
+                        Для энтузиастов, с удовольствием проживающих бОльшую часть суток в гараже.
+                        Простор для творчества в этой машине безграничен, чинить и менять можно практически всё.
+                    </p>
+                    <p class="text-main">
+                        Крутой пимп-мобиль для настоящего сутенёра! Закаленная в боях пиратская шхуна с суровым нравом!
+                        Самурай, преданный своему хозяину до последнего вздоха.
+                        Как сказал Хатори Ханзо, передавая свой лучший меч Чёрной Мамбе, "Даже если сам Будда окажется у тебя на пути, он будет повержен!"
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="column-60">
-            <div class="text-box">
-                <h2 class="block-title text-center">История тачки</h2>
-                <p class="text-main">
-                    Продаю свою "семерку"! Покупка, прямо скажем, сомнительная, но зато и цена - чисто символическая.
-                    40 тысяч рублей и корвет ваш! Год выпуска 1996, состояние спорное.Пробег обозначен на табло как 52000,
-                    но под этим стоит понимать 152000. А если совсем честно, то 252000.
-                </p>
-                <p class="text-main">
-                    Самое главное, аппарат на ходу! По городу никаких проблем (кроме того, что без кондиционера летом в ней жарко как в аду).
-                    Рвёт со светофора многие иномарки (особенно те, которые не подозревают, что участвуют в состязании).
-                    По трассе тоже нормуль. Какую скорость вам удастся на ней развить, зависит только от вашего инстинкта самосохранения.
-                    Лично я в те редкие разы, когда разгонял ее до 130, ловил себя на том, что не моргаю, не шевелюсь и практически не дышу.
-                </p>
-                <p class="text-main">
-                    Машина в ДТП не участвововала. Но передние крылья немного помяты оба. Наверное били до меня. Хотя я тоже раз стукнул, если честно, но очень медленно.
-                    У левого крыла есть некрашеный участок серого цвета.
-                    Очень помогает обнаруживать автомобиль на больших парковках и придает зверюге неповторимую индивидуальность.
-                    По кузову - есть некоторые участки, которые можно считать нормальными. Кузов целиком менян в 2000 году, но по нему не скажешь.
-                </p>
-                <p class="text-main">
-                    Внутренняя отделка салона выполнена по чьей-то непостижимой прихоти с использованием линолеума. С этим придется жить.
-                    Глубоко в водительском кресле (у которого что-то лопнуло внутри, отчего оно стало ниже, чем должно быть)
-                    есть какая-то очень острая деталь, которая иногда больно впивается в поясницу. Я так и не разобрался, что это за деталь,
-                    почему она там и как такое вообще может быть.
-                </p>
-                <p class="text-main">
-                    Пассажирская дверь периодически заедает. Брелок сигнализации в ахтунге, давно выпала пластмасса над главной кнопкой,
-                    поэтому туда приходится тыкать ключом. Но это не сложно, потому что ключ всегда отдельно от брелка,
-                    потому что пластмассовое ушко тоже давно разломалось. В сервисе на вопрос о замене брелка неуважительно смеются.
-                </p>
-                <p class="text-main">
-                    В машине последние полтора года не курил. А до этого курил, очень много.
-                    Но не больше, чем предыдущий хозяин и его многочисленные друзья - одновременно, все вместе, зимой, с плотно закрытыми стеклами.
-                    Потолок нехарактерно серого цвета не позволит этого скрыть.
-                </p>
-                <p class="text-main">
-                    Диски плохие.
-                </p>
-                <p class="text-main">
-                    Печка - адское горнило - работает зимой так что мама не горюй.
-                    Но к сожалению, горячий воздух подтравливает снизу и летом, когда печка выключена, и если жать больше 110 по трассе в сандалях,
-                    то по-мелочи припекает пальцы на правой ноге.
-                </p>
-                <p class="text-main">
-                    Из монтажного блока имеются странные разводки, которые не с первого раза понимает даже мой электрик.
-                    Я не смогу объяснить зачем некоторые из них сделаны, но точно помню, что без них что-то не крутится.
-                    Сам монтажный блок, кстати, лучше поменять, некоторые контакты подоткнуты спичками и прутиками, это не совсем правильно и не очень безопасно.
-                </p>
-                <p class="text-main">
-                    Я рад бы сказать, что зато в эту машину вложена вся моя любовь и забота, но это не так.
-                    В нее вложены только ненависть и презрение. Не шаря в устройстве автомобиля, капот я открывал либо чтобы долить какую-нибудь жидкость,
-                    исчезнувшую накануне без следа и видимых причин, либо чтобы в недоумении смотреть на двигатель, когда машина вдруг встаёт.
-                </p>
-                <p class="text-main">
-                    Кому это нужно. Отличный тренажер для начинающих, после которого вождение любого автомобиля,
-                    чей год выпуска позже 1982 года, покажется благодатным облегчением. Для грубой работы на износ.
-                    Груженая под крышу стройматериалами и с потным мужиком-работягой за рулем эта машина будет выглядеть правильнее,
-                    чем с девочкой-студенткой, чей телефон стоит примерно столько же.
-                    Для энтузиастов, с удовольствием проживающих бОльшую часть суток в гараже.
-                    Простор для творчества в этой машине безграничен, чинить и менять можно практически всё.
-                </p>
-                <p class="text-main">
-                    Крутой пимп-мобиль для настоящего сутенёра! Закаленная в боях пиратская шхуна с суровым нравом!
-                    Самурай, преданный своему хозяину до последнего вздоха.
-                    Как сказал Хатори Ханзо, передавая свой лучший меч Чёрной Мамбе, "Даже если сам Будда окажется у тебя на пути, он будет повержен!"
-                </p>
-            </div>
+    </div>
+
+    <div class="footer">
+        <div class="container text-center">
+            <p class="footer-text">Телефон: +7 915 222 33 44</p>
+            <p class="footer-text">E-mail: <a href="mailto:semerka@autovaz.ru">semerka@autovaz.ru</a></p>
+            <p class="text-small">
+                Источник:
+                <a href="http://www.adme.ru/svoboda-narodnoe-tvorchestvo/kak-genialno-prodat-semerku-514505/">
+                    http://www.adme.ru/svoboda-narodnoe-tvorchestvo/kak-genialno-prodat-semerku-514505/
+                </a>
+                © AdMe.ru
+            </p>
         </div>
     </div>
+
 </div>
-
-
-<div class="footer">
-    <div class="container text-center">
-        <p class="footer-text">Телефон: +7 915 222 33 44</p>
-        <p class="footer-text">E-mail: <a href="mailto:semerka@autovaz.ru">semerka@autovaz.ru</a></p>
-    </div>
-    <div class="container text-center">
-        <p class="text-small">
-            Источник: 
-            <a href="http://www.adme.ru/svoboda-narodnoe-tvorchestvo/kak-genialno-prodat-semerku-514505/">
-                http://www.adme.ru/svoboda-narodnoe-tvorchestvo/kak-genialno-prodat-semerku-514505/
-            </a>
-            © AdMe.ru
-        </p>
-    </div>
-</div>
-
 
 </body>
 </html>
