--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="column-40">
                 <div class="text-box">
                     <h2 class="block-title text-center">Моя прелесть</h2>
-                    <img src="img/car.jpg" alt="[Car photo]" class="сar-image">
+                    <img src="img/car.jpg" alt="[Car photo]" class="car-image">
                 </div>
                 <div class="text-box">
                     <h2 class="block-title text-center">Характеристики</h2>
